# realm

./: .clang-format  .cmake-format.yaml  .gitattributes  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  test.py
.github/workflows/: ci.yml  coverage.yml
.gitlab/: ci-frontier.yml  prep_script.sh  test_script.sh
benchmarks/: CMakeLists.txt
cmake/: FetchAndBuildGASNet.cmake  FindGASNet.cmake  LegionConfigCommon.cmake.in  RealmPackaging.cmake
examples/: CMakeLists.txt
language/: travis.py
language/src/regent/: std.t
realm/: .git-blame-ignore-revs  CMakeLists.txt  README.md
realm/.github/workflows/: ci.yml  coverage.yml
realm/benchmarks/: CMakeLists.txt
realm/benchmarks/event_latency/: CMakeLists.txt  event_latency.cc
realm/benchmarks/event_throughput/: event_throughput.cc
realm/benchmarks/event_ubench/: CMakeLists.txt  event_ubench.cc
realm/benchmarks/lock_chains/: lock_chains.cc
realm/benchmarks/lock_contention/: lock_contention.cc
realm/benchmarks/memcpy/: memcpy.cc
realm/benchmarks/reducetest/: reducetest.cc
realm/benchmarks/task_throughput/: CMakeLists.txt  task_throughput.cc  task_throughput.h
realm/benchmarks/task_ubench/: CMakeLists.txt  task_ubench.cc
realm/cmake/: .clang-format-ignore  FindGASNet.cmake  FindLLVM.cmake  FindPapi.cmake  RealmConfig.cmake.in  RealmPackaging.cmake
realm/examples/: CMakeLists.txt
realm/examples/saxpy/: CMakeLists.txt  saxpy.h  saxpy_cpu.cc
realm/examples/stencil/: cpu_kernels.cc  cpu_kernels.h  stencil.cc
realm/src/: CMakeLists.txt  realm.h
realm/src/realm/: activemsg.cc  activemsg.h  activemsg.inl  bgwork.cc  bgwork.h  bytearray.h  bytearray.inl  caching_allocator.h  circ_queue.h  circ_queue.inl  cmdline.h  cmdline.inl  codedesc.cc  codedesc.h  codedesc.inl  compiler_support.h  custom_serdez.h  custom_serdez.inl  dynamic_table.h  dynamic_table.inl  dynamic_templates.h  dynamic_templates.inl  event.h  event.inl  event_impl.h  event_impl.inl  faults.cc  faults.h  hardware_topology.cc  hardware_topology.h  id.h  id.inl  idx_impl.cc  idx_impl.h  indexspace.h  indexspace.inl  inst_impl.cc  inst_impl.h  inst_layout.cc  inst_layout.h  (+87 more)
realm/src/realm/cuda/: cuda_access.cc  cuda_access.h  cuda_access.inl  cuda_internal.cc  cuda_internal.h  cuda_memcpy.h  cuda_module.cc  cuda_module.h  cuda_module.inl  cuda_redop.h  cudart_hijack.cc  cudart_hijack.h
realm/src/realm/gasnet1/: gasnet1_module.cc  gasnet1_module.h  gasnetmsg.cc  gasnetmsg.h
realm/src/realm/gasnetex/: gasnetex_internal.cc  gasnetex_internal.h  gasnetex_module.cc  gasnetex_module.h
realm/src/realm/hdf5/: hdf5_access.cc  hdf5_access.h  hdf5_access.inl  hdf5_internal.cc  hdf5_internal.h  hdf5_module.cc  hdf5_module.h
realm/src/realm/hip/: hip_access.cc  hip_access.h  hip_access.inl  hip_hijack.cc  hip_hijack.h  hip_internal.cc  hip_internal.h  hip_module.cc  hip_module.h  hip_module.inl  hip_redop.h
realm/src/realm/llvmjit/: llvmjit.h  llvmjit.inl  llvmjit_internal.cc  llvmjit_internal.h  (+2 more)
realm/tests/: CMakeLists.txt  alltoall.cc  compqueue.cc  coverings.cc  ctxswitch.cc  cuda_arrays.cc  cuda_arrays.h  cuda_memcpy_test.cc  deferred_allocs.cc  deppart.cc  event_subscribe.cc  extres_alias.cc  idcheck.cc  inst_reuse.cc  large_tls.cc  machine_config_test.cc  memmodel.cc  memspeed.cc  multiaffine.cc  multiaffine.h  osdep.h  philox.h  proc_group.cc  realm_reinit.cc  reservations.cc  scatter.cc  serializing.cc  simple_reduce.cc  sparse_construct.cc  subgraphs.cc  task_stream.cc  taskreg.cc  test_nodeset.cc  test_profiling.cc  transpose.cc
realm/tests/c/: test_c_external_inst.cc  test_c_inst.cc  test_event.cc  test_event_poisoned.cc  test_memory_query.cc  test_processor_query.cc  test_runtime.cc
realm/tests/unit_tests/: c_event.cc  c_runtime_attr.cc  test_common.inl  test_mock.h
realm/tutorials/: CMakeLists.txt
realm/tutorials/barrier/: barrier.cc
realm/tutorials/completion_queue/: completion_queue.cc
realm/tutorials/cuda_interop/: CMakeLists.txt
realm/tutorials/deferred_allocation/: deferred_allocation.cc
realm/tutorials/events/: CMakeLists.txt  events_basic.cc
realm/tutorials/hello_world/: CMakeLists.txt  hello_world.cc
realm/tutorials/index_space_copy_fill/: index_space_copy_fill.cc
realm/tutorials/index_space_ops/: index_space_ops.cc
realm/tutorials/machine_model/: machine_model.cc
realm/tutorials/profiling/: profiling.cc
realm/tutorials/reductions/: reductions.cc
realm/tutorials/region_instances/: region_instances.cc
realm/tutorials/reservation/: reservation.cc
realm/tutorials/subgraph/: subgraph.cc
runtime/: CMakeLists.txt  runtime.mk
runtime/legion/: bitmask.h  garbage_collection.h  legion.inl  legion_auto_trace.cc  legion_auto_trace.h  legion_config.h  legion_context.cc  legion_mapping.h  legion_ops.cc  legion_tasks.cc  region_tree.cc  region_tree.h  region_tree.inl  runtime.cc  runtime.h  trie.h
runtime/realm/: mem_impl.cc  mem_impl.h  mem_impl.inl  operation.cc  operation.h  operation.inl  proc_impl.cc  processor.h  realm_c.h
runtime/realm/prealm/: prealm.inl
src/: CMakeLists.txt  realm.hpp
src/realm/: compiler_support.h  event_impl.cc  event_impl.h  event_impl.inl  indexspace.inl  inst_impl.cc  inst_layout.inl  machine_impl.cc  operation.cc  operation.h  realm_c.cc  realm_c.h  sparsity.inl
src/realm/cuda/: cuda_internal.cc  cuda_memcpy.cu  cuda_module.cc
test/auto_tracing/: CMakeLists.txt  auto_tracing.cc
test/realm/: Makefile  inst_chain_redistrict.cc
test/realm/unit_tests/: c_event.cc  range_allocator_test.cc
tests/: CMakeLists.txt  machine_config_test.cc
tests/c/: test_c_external_inst.cc  test_c_inst.cc  test_event.cc  test_event_poisoned.cc  test_event_wait_cancel.cc  test_memory_query.cc  test_processor_query.cc  test_runtime.cc
tests/hpp/: common.h  test_runtime.cc
tests/unit_tests/: c_event.cc  event_test.cc  hpp_event_test.cc  hpp_machine_tests.cc  hpp_mem_query_tests.cc  hpp_proc_query_tests.cc  hpp_runtime_test.cc  hpp_span_test.cc  memcpy_channel_test.cc  test_mock.h
tools/legion_prof_rs/src/: serialize.rs  state.rs
tutorials/: CMakeLists.txt
(+59 files in other folders)
